added assessment files

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1336,7 +1336,6 @@
   "mStaticProfileDesc": "Update your information to get the best-suited courses and programs.",
   "mStaticWelcome": "Namaste! Welcome to the journey of anytime anywhere learning.",
   "mStaticGetstartvideo": "What is iGOT Karmayogi?",
-  "mStaticJoinnow": "Join Now",
   "mStaticVideoConference": "We are now available on Video Conference",
   "mStaticSupportrequired": "For any support required",
   "mStaticDay": "Monday to Friday",
@@ -1942,7 +1941,6 @@
   "mAssessmentNotAllowedToSwitchSection": "You are not allowed to move to the next section until the current section is submitted.",
   "mLearnObjectives": "Objectives",
   "mLearnRedirect": "Redirect",
-  "mStaticForYou": "For You",
   "mExploreDiscoverMentors": "Discover Mentors",
   "mExploreDiscoverMentorsDescription": "Connect with mentors who will guide your learning journey",
   "mKarmayogiSurvey": "Karmayogi Survey",
@@ -2088,8 +2086,7 @@
   "mSelfRegisterKnowOrganisationMessage": "If you know your organisation name correctly please",
   "mSelfRegisterToRegister": "to register",
   "mSelfRegisterRegistrationClosed": "Registrations are closed",
-  "mSelfRegisterRegistrationClosedDescription": "Registrations are closed as of now please reach out to your department MDO or please write us at ",
-  "mSelfRegisterWithOrgAndDesignation": "with organization and designation name.",
+  "mSelfRegisterRegistrationClosedDescription": "Registrations are closed as of now. You may reach out to your respective nodal officer for assistance. Click on the below link to get the name and email of your respective Nodal officer.",
   "mThisFieldIsRequired":"This field is required",
   "mSelectAnOption":"Select an option",
   "mDoptBlendedProgramEligibilityMessage1":"You are not eligible for the",
@@ -2231,6 +2228,7 @@
   "mDiscussionReported": "Thanks for reporting!",
   "mDiscussionReportedMessage": "Your report is under review. We will take action if it goes against our guidelines.",
   "mDiscussionShowPost": "Show post",
+  "mDiscussionPostModerationInfoMessage": "This content is being moderated and may be removed if it violates community guidelines.",
   "mCommonRelevant" : "Relevant",
   "mIgotAIGeneratedRecommendation" : "These are AI generated recommendations",
   "mIgotAICuratingSuitableLearningCourse" : "Curating the most suitable learning course recommendations tailored just for you",
@@ -2395,7 +2393,6 @@
   "mRetrievingResult":"Retrieving results",
   "mIgotAiErrorMessage":"Sorry, I am unable to process your request at the moment. Please try again.",
   "mFeedbackSubmitted":"Feedback submitted successfully",
-  "mMarkedAllAsRead":"Marked all notifications as read",
   "mProfileNameRequired" : "Name is required",
   "mProfileNumbersNotAllowed" : "Name cannot contain numbers",
   "mProfileNoSpecialCharacterAllowed" : "Special characters are not allowed in the name",
@@ -2453,6 +2450,18 @@
   "mProfileDegreeName": "Degree name",
   "mProfileOtherInstituteName": "Other Institute name",
   "mKarmapointEnrollTooltipMsg" : "Note: This is only applicable for your first enrolment.",
+  "mAboutLanguagesAvailable" : "Languages available",
+  "mTocSelectContentLanguage" : "Select Content Language",
+  "mTocContinueWhereyouLeftOff" : "Continue where you left off in {lang}?",
+  "mTocYouHaveMadeProgress" : "You've already made some progress in this language.",
+  "mTocContinueFromLeftOff" : "If you continue it will resume from where you left off.",
+  "mTocWantToChangeLanguage" : "Are you sure you want to change the language?",
+  "mTocSwitchingLangWillResetProgress" : "Switching the language will reset your progress.",
+  "mTocChangeLanguage" : "Change Language",
+  "mTocCourseRestartFromBeginning" : "The course will restart from the beginning in the selected language.",
+  "mTocChoosPreferredLanguage" : "Choose Your Preferred Language",
+  "mTocChoosPreferredLanguageDescription" : "This course is available in multiple languages. You can select one to begin.",
+  "mTocConfirmStartCourse" : "Confirm & Start Course",
   "mRequestRejectedMessage":"Are you sure you want to ignore this request?",
   "mRemoveConnectionConfirmationMessage":"Are you want to remove this connection?",
   "mBlockUserMessage":"Are you sure you want to block this user?",
@@ -2470,7 +2479,28 @@
   "mTranscriptDisclaimer":"Disclaimer : These transcripts and subtitles are AI-generated and may contain errors.",
   "mYouHaveBlockedThisProfile":"You have blocked this profile",
   "mBlockIncomingMessage":"You are not authorised to see this profile.",
+  "mProfileVisibilityControl":"Visibility Control",
+  "mProfilePublic":"Public",
+  "mProfilePrivate":"Private",
+  "mProfileAnyone":"Anyone",
+  "mProfileAnyoneCanViewDataOnYourProfile":"Your profile details will be visible to everyone on the platform.",
+  "mProfileConnectionOnly":"Connections Only",
+  "mProfileLockMyProfile":"No One/Lock my profile",
+  "mProfileNoOneCanViewDataOnYourProfile":"Selecting this option will hide your profile details from everyone, including your connections.",
+  "mProfileLockedProfile":"This profile is locked",
+  "mProfileVisibilityUpdated":"Updated Successfully",
+  "mTocAvailableInLanguages" : "Available in {count} languages",
+  "mTocAvailableLanguages" : "Available Languages",
+  "mTocAlreadyStartedCourse" : "You've already started this course",
+  "mTocYouHaveMadeSome" : "You’ve made some ",
+  "mTocProgress" : "progress",
+  "mTocInAnotherLanguageCourse" : " in another language of this course.",
+  "mTocWouldYouLikeTo" : "Would you like to ",
+  "mTocWhereYouLeftOff" : "resume where you left off",
+  "mTocContinueWithThisVersion" : ", or continue with this version instead?",
+  "mTocContinueHere" : "Continue Here",
   "mNotificationEnabled":"Notification enabled!",
   "mNotificationDisabled":"Notification disabled!",
-  "mProfileCentralDeputation":"Central Deputation"
+  "mProfileCentralDeputation":"Central Deputation",
+  "mStaticApar": "APAR"
 }
